--- a/src/main/resources/templates/listingform.html
+++ b/src/main/resources/templates/listingform.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">>
+<html  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+
+
+
+
+
+
+
+
 <title>village listings</title>
 </head>
 <body>
@@ -10,36 +25,73 @@
 	<h2> Listing Details </h2>
 	
 	<form  th: object="${listing}" th: action="@{/listing}" method="post">
-	<p> ID: <input type="hidden" th:field="*{id}"/>
-	<span th: if="${#fields.hasErrors('id')}" th:errors="*{id}">Id Error </span></p>
+	
+	<div class = "input-group">
+	<span class="input-group-addon" id = "basic-addon1"> ID </span> 
+	<input type="text" th:field="*{id}" class="form-control" placeholder="ID" aria-describedby="basic-addon1"/>
+	<span th: if="${#fields.hasErrors('id')}" th:errors="*{id}" Id Error </span>
 	
 	
+	</div>
 	
 	
-	<p> Address:<br> <input type="text" name="address"><br>
-	<span th:if="${#fields.hasErrors('address')}" th:errors="*{address}" Address Error</span></p>
-	City: <br> <input type="text" name="city"><br>
+	<div class = "input-group">
+	<span class ="input-group-addon" id="basic-addon1"> Address </span>
+	<input type ="text" class="form-control" placeholder="Rent's address" aria-describedby="basic-addon1" name ="address"/>
 	
-	State: <br> <input type="text" name"state"><br>
+	<span th:if="${#fields.hasErrors('address')}" th:errors="*{address}" Address Error</span>
+	</div>
 	
-	<input type="radio" name="isrented" value="rented" checked> Rented<br>
-	<input type="radio" name="isrented" value="notrented"> Not Rented<br>
+	<div class="input-group">
+	<span class="input-group-addon" id="basic-addon1"> City </span>
+	<input type="text" class="form-control" placeholder="City" aria-describedby="basic-addon1" name= "city"/>
 	
-	<textarea name ="description" rows="10" cols="30"> Listing Description </textarea>
 	
-	<textarea name ="rules" rows="10" cos="30"> Rules </textarea>
+	</div>
+	
+	<div class="input-group">
+	<span class="input-group-addon" id= "basic-addon1"> State</span>
+	<input type="text" class="form-control" placeholder="State" aria-describedby="basic-addon1" name= "state"/>
+	
+	</div>
+	
+	<div>
+	<h4>Room Rented or Not?</h4>
+	<input type="radio" name="isrented" value="Yes" checked> Yes<br>
+	<input type="radio" name="isrented" value="No"> No<br>
+	</div>
+	
+	<div>
+	<h5> Room Description </h5>
+	<textarea name ="description" rows="10" cols="50"> Listing Description </textarea>
+	</div>
+	
+	<div>
+	<h5> Listing Rules </h5>
+	<textarea name ="rules" rows="10" cols="50"> Rules </textarea>
+	</div>
+	
+	
+	<div>
+	<h5> WiFi Present?</h5> 
+	 <input type="radio" name="wifi" value="Yes" checked>Yes<br>
+	 <input type="radio" name="wifi" value="No"> No<br>
+	 </div>
 	 
-	 <input type="radio" name="wifi" value="wifi" checked> WIFI<br>
-	 <input type="radio" name="wifi" value="nowifi"> No Wifi<br>
+	 <div>
+	 <h5> Cable Present?</h5> 
+	 <input type="radio" name="cable" value="No" checked> No<br>
+	 <input type="radio" name="cable" value="Basic"> Basic<br>
+	 <input type="radio" name="cable" value="Premium"> Premium<br>
+	 </div>
 	 
-	  <input type="radio" name="cable" value="cable" checked> cable<br>
-	 <input type="radio" name="cable" value="nocable"> No cable<br>
-	 
-	   <input type="radio" name="pbathroom" value="bath" checked>Private Bathroom<br>
-	 <input type="radio" name="pbathroom" value="nobath"> No Private Bathroom<br>
-	 
+	 <div>
+	 <h5> Private Bathroom?</h5>
+	 <input type="radio" name="pbathroom" value="Yes" checked>Yes<br>
+	 <input type="radio" name="pbathroom" value="No"> No<br>
+	 </div>
 
-	 <button type="submit" class="btn btn-default">Submit</button>
+	 <button type="submit" >Submit</button>
 	 
 	
 	
